k8-deployments.yml
# AGENDA APP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: agenda-app
  labels:
    app: agenda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agenda-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: agenda-app
    spec:
      containers:
        - name: agenda-app
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/agenda-service-p2:0.1.0
          ports:
            - containerPort: 3020
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-agenda-app
  annotations:
    cloud.google.com/backend-config: '{"default": "agenda-backend-config"}'
spec:
  type: NodePort
  selector:
    app: agenda-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31007
---
# ORDERS APP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app
  labels:
    app: orders-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
        - name: orders-app
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/orders-service-p2:0.1.0
          ports:
            - containerPort: 3020
                
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-orders-app
  annotations:
    cloud.google.com/backend-config: '{"default": "order-backend-config"}'
spec:
  type: NodePort
  selector:
    app: orders-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31008

---
# PAYMENTS APP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-app
  labels:
    app: payments-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: payments-app
    spec:
      containers:
        - name: payments-app
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/payments-service-p2:0.1.0
          ports:
            - containerPort: 3020
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-payments-app
  annotations:
    cloud.google.com/backend-config: '{"default": "payments-backend-config"}'
spec:
  type: NodePort
  selector:
    app: payments-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31009

---
# SELLERS APP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sellers-app
  labels:
    app: sellers-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sellers-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sellers-app
    spec:
      containers:
        - name: sellers-app
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/sellers-service-p2:0.1.0
          ports:
            - containerPort: 3020
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: service-sellers-app
  annotations:
    cloud.google.com/backend-config: '{"default": "sellers-backend-config"}'
spec:
  type: NodePort
  selector:
    app: sellers-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
      nodePort: 31010
---
#MONOLITH
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mono-app
  labels:
    app: mono-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mono-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mono-app
    spec:
      containers:
        - name: mono-app
          image: us-central1-docker.pkg.dev/miso-339504/cloud-project/app-image:1.0
          ports:
            - containerPort: 3020
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-mono-app
  annotations:
    cloud.google.com/backend-config: '{"default": "mono-backend-config"}'
spec:
  type: NodePort
  selector:
    app: mono-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3020
      nodePort: 31019
---
#PEDIDO
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido-app
  labels:
    app: pedido-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pedido-app
    spec:
      containers:
        - name: pedido-app
          image: us-central1-docker.pkg.dev/cloud-native-340317/uniandes-misw-native-s2-tutorial-app-3/app-image-pedidos:1.1
          ports:
            - containerPort: 3090
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-pedido-app
  annotations:
    cloud.google.com/backend-config: '{"default": "pedido-backend-config"}'
spec:
  type: NodePort
  selector:
    app: pedido-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3090
      nodePort: 31017

# INGRESS
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /agenda
        backend:
          service:
            name: service-agenda-app
            port: 
              number: 80
      - pathType: Prefix
        path: /orders
        backend:
          service:
            name: service-orders-app
            port: 
              number: 80
      - pathType: Prefix
        path: /payments
        backend:
          service:
            name: service-payments-app
            port: 
              number: 80
      - pathType: Prefix
        path: /sellers
        backend:
          service:
            name: service-sellers-app
            port: 
              number: 80

      - pathType: Prefix
        path: /pedido
        backend:
          service:
            name: service-pedido-app
            port: 
              number: 80

      - pathType: Prefix
        path: /sesion
        backend:
          service:
            name: service-mono-app
            port: 
              number: 8080

      - pathType: Prefix
        path: /login
        backend:
          service:
            name: service-mono-app
            port: 
              number: 8080
      
      - pathType: Prefix
        path: /busqueda
        backend:
          service:
            name: service-mono-app
            port: 
              number: 8080
        
      - pathType: Prefix
        path: /landing
        backend:
          service:
            name: service-mono-app
            port: 
              number: 8080

      - pathType: Prefix
        path: /producto
        backend:
          service:
            name: service-mono-app
            port: 
              number: 8080
